--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -11,7 +11,7 @@ html {
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
-  font-size: 2rem;
+  font-size: 1.67rem;
   line-height: 1.5;
   color: white;
   max-width: 144rem;
@@ -22,12 +22,29 @@ body {
   }
 }
 
+h1 {
+  font-size: 3.5rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+
+  @include breakpoint-down(small) {
+    font-size: 4rem;
+  }
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  font-family: "Poppins", sans-serif;
+}
+
 .button {
   color: $violet;
   padding: 1.6rem 6rem;
   background-color: white;
   border-radius: 50px;
   cursor: pointer;
+  box-shadow: 0px 0px 10px rgba($color: #000000, $alpha: 0.5);
   transition: all 0.2s ease-in-out;
 
   @include breakpoint-down(small) {
@@ -38,4 +55,8 @@ body {
     background-color: $softMagenta;
     color: white;
   }
+}
+
+.container {
+  padding: 0 8rem;
 }
