--- a/scss/style.css
+++ b/scss/style.css
@@ -12,7 +12,7 @@ html {
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
-  font-size: 2rem;
+  font-size: 1.67rem;
   line-height: 1.5;
   color: white;
   max-width: 144rem;
@@ -25,12 +25,32 @@ body {
   }
 }
 
+h1 {
+  font-size: 3.5rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
+
+@media (max-width: 639px) {
+  h1 {
+    font-size: 4rem;
+  }
+}
+
+a {
+  text-decoration: none;
+  display: inline-block;
+  font-family: "Poppins", sans-serif;
+}
+
 .button {
   color: #674baf;
   padding: 1.6rem 6rem;
   background-color: white;
   border-radius: 50px;
   cursor: pointer;
+  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
@@ -44,5 +64,64 @@ body {
 .button:hover {
   background-color: #e882e8;
   color: white;
+}
+
+.container {
+  padding: 0 8rem;
+}
+
+main {
+  background-color: #674baf;
+  background-image: url(../images/bg-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center center;
+  width: 100%;
+  height: 80rem;
+}
+
+.header__logo {
+  width: 21rem;
+  margin-top: 6rem;
+  margin-bottom: 10rem;
+}
+
+.hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.hero figure {
+  -webkit-box-flex: 1.72;
+      -ms-flex: 1.72;
+          flex: 1.72;
+}
+
+.hero figure img {
+  width: 70rem;
+}
+
+.hero .text {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  margin-top: -15rem;
+}
+
+.hero .text h1 {
+  margin-bottom: 3rem;
+}
+
+.hero .text p {
+  margin-bottom: 2.5rem;
 }
 /*# sourceMappingURL=style.css.map */
