--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,47 @@
 @import "variable";
 @import "mixin";
 @import "global";
+
+main {
+  background-color: $violet;
+  background-image: url(../images/bg-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center center;
+  width: 100%;
+  height: 80rem;
+}
+
+.header {
+  &__logo {
+    width: 21rem;
+    margin-top: 6rem;
+    margin-bottom: 10rem;
+  }
+}
+
+.hero {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+
+  figure {
+    flex: 1.72;
+    img {
+      width: 70rem;
+    }
+  }
+
+  .text {
+    flex: 1;
+    margin-top: -15rem;
+    h1 {
+      margin-bottom: 3rem;
+    }
+
+    p {
+      margin-bottom: 2.5rem;
+    }
+  }
+}
