--- a/scss/style.css
+++ b/scss/style.css
@@ -124,4 +124,30 @@ main {
 .hero .text p {
   margin-bottom: 2.5rem;
 }
+
+.footer {
+  text-align: right;
+}
+
+.footer a {
+  color: white;
+  display: inline-block;
+  border: 1px solid white;
+  border-radius: 50px;
+  width: 5rem;
+  height: 5rem;
+  margin-right: 1rem;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.footer a:hover {
+  color: #e882e8;
+  border-color: #e882e8;
+}
+
+.footer i {
+  font-size: 2rem;
+  padding: 1.55rem;
+}
 /*# sourceMappingURL=style.css.map */
