--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,3 +45,28 @@ main {
     }
   }
 }
+
+.footer {
+  text-align: right;
+
+  a {
+    color: white;
+    display: inline-block;
+    border: 1px solid white;
+    border-radius: 50px;
+    width: 5rem;
+    height: 5rem;
+    margin-right: 1rem;
+    transition: all 0.2s ease-in-out;
+
+    &:hover {
+      color: $softMagenta;
+      border-color: $softMagenta;
+    }
+  }
+
+  i {
+    font-size: 2rem;
+    padding: 1.55rem;
+  }
+}
