--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,10 +6,15 @@ main {
   background-color: $violet;
   background-image: url(../images/bg-desktop.svg);
   background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center center;
+  background-size: 85%;
+  background-position: center top;
   width: 100%;
-  height: 80rem;
+  // height: 100vh;
+
+  @include breakpoint-down(medium) {
+    background-image: url(../images/bg-mobile.svg);
+    background-size: 100%;
+  }
 }
 
 .header {
@@ -17,6 +22,12 @@ main {
     width: 21rem;
     margin-top: 6rem;
     margin-bottom: 10rem;
+
+    @include breakpoint-down(medium) {
+      width: 24rem;
+      margin-top: 7rem;
+      margin-bottom: 13.5rem;
+    }
   }
 }
 
@@ -26,28 +37,58 @@ main {
   align-items: center;
   flex-wrap: wrap;
 
+  @include breakpoint-down(medium) {
+    display: block;
+    text-align: center;
+  }
+
   figure {
     flex: 1.72;
+    display: inline-block;
     img {
-      width: 70rem;
+      display: inline-block;
+      width: 72rem;
+
+      @include breakpoint-down(medium) {
+        width: 100%;
+      }
     }
   }
 
   .text {
     flex: 1;
-    margin-top: -15rem;
+    padding-top: 5rem;
+    align-self: baseline;
+
+    @include breakpoint-down(medium) {
+      padding-top: 13rem;
+      margin-bottom: 12rem;
+    }
     h1 {
       margin-bottom: 3rem;
+
+      @include breakpoint-down(medium) {
+        margin-bottom: 5.5rem;
+      }
     }
 
     p {
       margin-bottom: 2.5rem;
+
+      @include breakpoint-down(medium) {
+        margin-bottom: 5.5rem;
+      }
     }
   }
 }
 
 .footer {
   text-align: right;
+  padding-bottom: 4rem;
+  @include breakpoint-down(medium) {
+    text-align: center;
+    padding-bottom: 7.5rem;
+  }
 
   a {
     color: white;
